<resources>
    <string name="hello">开心街区欢迎您!</string>
    <string name="app_name">开心街区</string>
    <string name="main_news">新鲜事</string>
    <string name="main_home">地点</string>
    <string name="main_myinfo">我的地盘</string>
    <string name="main_friend">好友动态</string>
    <string name="main_setting">设置</string>
    <string name="main_content">内容库</string>
    <string name="main_journal">i@新鲜事</string>
    <string name="main_nearby">i@日志</string>
    <string name="main_estates">搜索路线</string>
    <string name="main_badges">勋章</string>
    <string name="main_quiet">悄悄话</string>
    <string name="main_mei">美图库</string>
    <string name="main_tao">淘宝街</string>
    <string name="main_umeng">应用联盟</string>
    <string name="email">邮箱地址</string>
    <string name="email_optional">邮箱地址（可选）</string>
    <string name="password">密码</string>
    <string name="reg_signup">同意《注册协议》并注册</string>
    <string name="signup"> 注 册    </string>
    <string name="nick_name">用户名</string>
    <string name="sign_name">用户名或邮箱</string>
    <string name="mobile_optional">手机（可选）</string>
    <string name="signing_up">正在注册...</string>
    <string name="signup_ok">注册成功</string>
    <string name="login"> 登 录    </string>
    <string name="checkin">签   到</string>
    <string name="contactin">从通讯录导入</string>
    <string name="checkin_ok">签到成功</string>
    <string name="checkin_nolocal">您所处的位置未登记，请新增地点信息</string>
    <string name="reg_weibo">这是您首次使用微博登录，请完善登录资料</string>
    <string name="functions">功能</string>
    <string name="my_profile">个人资料</string>
    <string name="my_profile_summary">设置您的个人资料</string>
    <string name="sync_settings">同步设置</string>
    <string name="sync_settings_summary">同步信息到聊天程序和社交网络</string>
    <string name="preferences_push_notification_summary_off">新鲜事不同步到微博</string>
    <string name="preferences_push_notification_summary_on">新鲜事同步到微博</string>
    <string name="preferences_push_notification">同步到微博</string>
    <string name="preferences_public_summary_off">好友不能发现自己的位置</string>
    <string name="preferences_public_summary_on">好友能够通过地图发现自己的位置</string>
    <string name="preferences_public">公开位置</string>
    <string name="other_settings">其它</string>
    <string name="help">帮助</string>
    <string name="feedback">反馈</string>
    <string name="btnsubmit"> 确 定   </string>
    <string name="btncancel"> 取 消   </string>
    <string name="infosubmit">确定</string>
    <string name="infocancel">取消</string>
    <string name="btnreturn">返回</string>
    <string name="btnrand">随机</string>
    <string name="btnbytime">定时发布</string>
    <string name="btnquiet"> 说悄悄话  </string>
    <string name="btnsms">发送短信</string>
    <string name="btndel">删除</string>
    <string name="btnref">刷新</string>
    <string name="binsina">绑定新浪微博</string>
    <string name="binrenren">绑定人人网账号</string>
    <string name="bintenc">绑定腾讯微博</string>
    <string name="help_summary">使用帮助</string>
    <string name="about">关于</string>
    <string name="about_summary">关于开心街区</string>
    <string name="process">正在加载，请稍侯...</string>
    <string name="execute">正在执行，请稍侯...</string>
    <string name="blog_title">日志标题</string>
    <string name="blog_content">日志内容</string>
    <string name="doing_content">说点什么吧</string>
    <string name="doing_comment">回复</string>
    <string name="place_commentlist">点评</string>
    <string name="place_comment">您的点评也许对别人有帮助哦</string>
    <string name="submit_placecomment">发表点评</string>
    <string name="submit_ok">发布成功</string>
    <string name="submit">发布</string>
    <string name="submit_doing">发布新鲜事</string>
    <string name="submit_comment">回复</string>
    <string name="submit_sms">发送短信</string>
    <string name="submit_blog">发布日志</string>
    <string name="submit_joinus">申请加好友</string>
    <string name="submit_joinok">同意加好友</string>
    <string name="submit_cancelus">移除好友</string>
    <string name="phone_album">手机相册</string>
    <string name="phone_graph">手机拍照</string>
    <string name="phone_clean">清除照片</string>
    <string name="phone_nofind">请选择图片文件</string>
    <string name="phone_add">增加图片</string>
    <string name="phone_comment">为便于您的通讯录好友出现在好友列表，请提供你的手机号码，开心街区网承诺保护您的隐私绝不透露给第三方</string>
    <string name="phone_hint">手机号码</string>
    <string name="flowword">字</string>
    <string name="error_net">网络连接失败，请检查网络设置</string>
    <string name="error_overflow">已超出</string>
    <string name="error_nofind">抱歉，未找到结果</string>
    <string name="error_venuesname">地点名称不能为空，请录入</string>
    <string name="error_regname">用户名不能为空，请录入</string>
    <string name="error_regpass">密码不能为空，请录入</string>
    <string name="error_regemail">邮箱地址不能为空，请录入</string>
    <string name="error_regemailhas">用户名已被使用，请更改</string>
    <string name="error_regfaile">注册失败，请联系客服或稍后重试</string>
    <string name="error_loginpass">用户名或密码不正确，请重新输入</string>
    <string name="error_loginnull">请输入用户名/邮箱地址和密码</string>
    <string name="sucess_reg">注册成功，祝您使用开心街区愉快</string>
    <string name="venues_name">地点名称</string>
    <string name="venues_phone">电话（可选）</string>
    <string name="venues_addr">地点描述（可选）</string>
    <string name="venues_cate">地点类别</string>
    <string name="venues_btn">增加新地点</string>
    <string name="venues_ok">新增地点信息成功</string>
    <string name="venues_default">北京</string>
    <string name="venues_cate0">其他</string>
    <string name="venues_cate1">餐饮</string>
    <string name="venues_cate2">宾馆</string>
    <string name="venues_cate3">商场</string>
    <string name="venues_cate4">酒店</string>
    <string name="venues_cate5">景点</string>
    <string name="venues_cate6">住宅</string>
    <string name="venues_cate7">写字楼</string>
    <string name="venues_cate8">学校</string>
    <string name="venues_cate9">商店</string>
    <string name="item_title">商品名称</string>
    <string name="item_price">商品价格</string>
    <string name="item_seller_nick">卖家昵称</string>
    <string name="item_num">商品数量</string>
    <string name="item_location">所在地</string>
    <string name="item_keyword">关键字</string>
    <string name="info_news">新鲜事</string>
    <string name="info_mynews">我的新鲜事</string>
    <string name="info_blog">日志</string>
    <string name="info_badges">我的勋章</string>
    <string name="info_myblog">我的日志</string>
    <string name="info_content">内容库</string>
    <string name="info_quiet">悄悄话</string>
    <string name="info_venues">周边地点</string>
    <string name="info_friend">好友动态</string>
    <string name="info_joinlist">好友请求</string>
    <string name="info_contactlist">通讯录好友</string>
    <string name="info_relogin">注销登录</string>
    <string name="info_exit">退出</string>
    <string name="info_qexit">确定要退出？</string>
    <string name="info_qrelogin">确定要注销登录？</string>
    <string name="info_nologin">请登录后进行该操作</string>
    <string name="info_tishi">提示</string>
    <string name="info_feedback">反馈收集</string>
    <string name="info_feedback_summary">将您的反馈提交给我们，我们将不断改善用户体验</string>
    <string name="info_getcontact">该操作将导入通讯录好友，导入后您将能看到通讯录好友的最新动态，开心街区网郑重承诺不会将客户隐私信息透露给第三方！</string>
    <string name="info_readall">阅读全文></string>
    <string name="info_readimg">查看图片></string>
    <string name="info_nojoinus">您还没有好友请求</string>
    <string name="info_nofriends">还没有好友动态，赶快提醒您的好友吧！</string>
    <string name="info_waitfriend">您的好友请求已经发出，请等待对方批准吧</string>
    <string name="info_cancelfriend">好友关系已移除</string>
    <string name="info_joinfriend">恭喜，你们已成为好友</string>
    <string name="info_myfriends">我的好友</string>
    <string name="info_contact">通讯录</string>
    <string name="info_contactok">更新成功</string>
    <string name="info_smsok">短信发送成功</string>
    <string name="info_sina">新浪微博好友</string>
    <string name="info_renren">人人网好友</string>
    <string name="info_tenc">腾讯微博好友</string>
    <string name="info_setfriend">好友设置</string>
    <string name="info_newblog">发布新日志</string>
    <string name="info_newdoing">发布新鲜事</string>
    <string name="info_newquiet">发送悄悄话</string>
    <string name="info_commentblog">回复日志</string>
    <string name="info_commentdoing">回复新鲜事</string>
    <string name="info_setmyinfo">设置个人资料</string>
    <string name="info_headimg">头像：</string>
    <string name="info_usersex">性别：</string>
    <string name="info_userphone">手机：</string>
    <string name="info_sex1">男士</string>
    <string name="info_sex0">女士</string>
    <string name="info_zai">在</string>
    <string name="info_date">日期</string>
    <string name="info_time">时间</string>
    <string name="info_cre">积分</string>
    <string name="info_exp">经验</string>
    <string name="info_ver">版本：</string>
    <string name="info_nosms">请选择通讯录好友</string>
    <string name="info_sms">“开心街区”很有趣一起来玩吧！下载地址http://hpstreets.com/res/a/hps.apk</string>
    <string name="info_credit" formatted="false">积分 + %s，经验 + %s</string>
    <string name="tr_radio_op1">立即发布</string>
    <string name="tr_radio_op2">定时发布</string>
    <string name="title_login">登录界面</string>
    <string name="title_detail_item_buy">商品购买页面</string>
    <string name="text_about">开心街区网手机客户端帮助您随时随地与通讯录好友、微博好友分享身边的开心趣事,成人,夫妻,儿童,短信笑话。
\n此版本基本功能：
\n1.快速分享新鲜事、日志，内嵌海量内容库同步到微博
\n2.查找周边好友，添加通讯录好友，地图定位周围的好友
\n3.通过地理位置信息服务，快速查找感兴趣的商家或娱乐场所，签到抢注得勋章
\n*技术支持邮箱hpstreets@gmail.com
\n*更多信息访问官方网站\n—http://www.hpstreets.com\n—http://home.hpstreets.com\n*官方微博\n—http://weibo.com/hpstreets\n</string>
    <string name="text_sign_up_agreement">注册协议</string>
    <string name="text_sign_up_agreement_yes">我同意</string>
    <string name="msctts">语音设置</string>
    <string name="msctts_summary">设置语音相关参数</string>
    <string name="preference_title_tts">合成设置</string>
    <string name="preference_key_tts_role">tts_role</string>
    <string name="preference_title_tts_role">发音人</string>
    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_dialog_title_tts_role">选择发音人</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_title_tts_speed">语速</string>
    <string name="preference_default_tts_speed">50</string>
    <string name="preference_dialog_title_tts_speed">选择语速</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_title_tts_volume">音量</string>
    <string name="preference_default_tts_volume">50</string>
    <string name="preference_dialog_title_tts_volume">选择音量</string>
    <string name="preference_key_tts_music">tts_music</string>
    <string name="preference_title_tts_music">背景音乐</string>
    <string name="preference_default_tts_music">0</string>
    <string name="preference_dialog_title_tts_music">选择背景音乐</string>
</resources>