<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/public_mood_edit_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10.0dip" >

        <EditText
            android:id="@+id/share_content"
            android:layout_width="fill_parent"
            android:layout_height="150dip"
            android:gravity="top"
            android:hint="@string/doing_content"
            android:scrollbars="vertical"
            android:text="@string/info_sms" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/SignUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/submit_sms" />

            <Button
                android:id="@+id/ReturnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/btnreturn" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>