<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/moodcommentItem"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/public_mood_edit_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/public_mood_edit_bg"
        android:orientation="vertical"
        android:padding="10.0dip" >

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textColor="@color/black" >

            <RadioButton
                android:id="@+id/radion1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_sex0" />

            <RadioButton
                android:id="@+id/radion2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_sex1" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@id/AddVenueButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnsubmit" />

            <Button
                android:id="@+id/ReturnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/btncancel" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>