<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/moodcommentItem"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/public_mood_edit_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/public_mood_edit_bg"
        android:orientation="vertical"
        android:padding="10.0dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_comment"
            android:textColor="@color/black"
            android:textSize="14.0dip"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/share_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/phone_hint"
            android:scrollbars="vertical" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="76dp"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >

            <TableRow android:gravity="center" >

                <Button
                    android:id="@id/AddVenueButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnsubmit" />

                <Button
                    android:id="@+id/ReturnButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/btncancel" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>