<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/public_mood_edit_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:shrinkColumns="1" >

        <TableRow>

            <ImageView
                android:id="@+id/good_pic_main"
                android:layout_width="200dip"
                android:layout_height="200dip"
                android:layout_span="2" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/item_title"
                android:textColor="#fffaa702" />

            <TextView
                android:id="@+id/item_title"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:textColor="#fffaa702" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/item_price"
                android:textColor="#fffaa702" />

            <TextView
                android:id="@+id/item_price"
                android:padding="3dip"
                android:textColor="#fffaa702" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/item_seller_nick"
                android:textColor="#fffaa702" />

            <TextView
                android:id="@+id/item_seller_nick"
                android:padding="3dip"
                android:textColor="#fffaa702" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/item_num"
                android:textColor="#fffaa702" />

            <TextView
                android:id="@+id/item_num"
                android:padding="3dip"
                android:textColor="#fffaa702" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/item_location"
                android:textColor="#fffaa702" />

            <TextView
                android:id="@+id/item_location"
                android:padding="3dip"
                android:textColor="#fffaa702" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical" >

        <ImageView
            android:id="@+id/decr"
            android:layout_width="32dip"
            android:layout_height="32dip"
            android:src="@drawable/action_back_off" />
    </LinearLayout>

</LinearLayout>