<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myxmlns="http://schemas.android.com/apk/res/com.limon.make"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35dip"
        android:background="#555555"
        android:gravity="center_vertical"
        android:paddingLeft="10dip" >

        <com.limon.widget.InfoView
            android:id="@+id/infoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="16dip"
            myxmlns:Text="@string/info_contactlist" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/action_aera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ListView
        android:id="@+id/msglist"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/toolbarLayout"
        android:layout_margin="0px"
        android:layout_weight="1.0"
        android:background="#BBFFFFFF"
        android:cacheColorHint="#00000000"
        android:divider="?android:attr/listDivider"
        android:dividerHeight="2px"
        android:fastScrollEnabled="true"
        android:focusable="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/SignUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/contactin"
            android:textStyle="bold" />

        <Button
            android:id="@+id/SendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/btnsms"
            android:textStyle="bold" />

        <Button
            android:id="@+id/DelButton"
            android:layout_width="65dip"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/btndel"
            android:textStyle="bold" />

        <Button
            android:id="@+id/RefButton"
            android:layout_width="65dip"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/btnreturn"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/action_aera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />
    <!--
        <com.limon.widget.ActionFriendContactView
		android:id="@+id/actionView" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:clickable="true" />
    -->

</LinearLayout>